<resources>
    <string name="no_new_summits">No new summits found</string>
    <string name="app_name">Summit Book</string>
    <string name="waiting_for_location">Waiting for location…</string>
    <string name="location_permission_denied">Location permission denied. Please enable it in settings.</string>
    <string name="required">required</string>
    <string name="optional">optional</string>
    <string name="nav_summits">Summits</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_diagrams">Diagrams</string>
    <string name="nav_osmap">Map</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_diashow">Image Diashow</string>
    <string name="nav_import">Import backup</string>
    <string name="nav_export">Export backup</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="accept">Accept</string>
    <string name="summit_name_hint">Name of summit</string>
    <string name="summit_name_compare_hint">Compare with summit</string>
    <string name="select_summit">Select summit</string>
    <string name="height_meter_hint">Elevation gain</string>
    <string name="height_meter">Height meter</string>
    <string name="kilometers">Kilometers</string>
    <string name="action_share">share</string>
    <string name="date">Date</string>
    <string name="yearly">Yearly</string>
    <string name="yearly_until_today">Yearly until today</string>
    <string name="quarterly">Quarterly</string>
    <string name="monthly">Monthly</string>
    <string name="calender_wek_abrv">cw</string>
    <string name="wekly">Weekly</string>
    <string name="tour_date">Activity date</string>
    <string name="date_format">%3$s-%2$s-%1$s</string>
    <string name="saveButtonText">Save</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="updateButtonText">Update</string>
    <string name="place_hint">All places visited</string>
    <string name="country_hint">country</string>
    <string name="comment_hint">comment, e.g. other places visited in trip, people joined, etc.</string>
    <string name="kilometers_hint">Distance</string>
    <string name="kilometers_accumulated">Distance accumulated</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="pace_hint">Average speed</string>
    <string name="distance_per_surface_hint">Surface</string>
    <string name="distance_per_road_type_hint">Road Type</string>
    <string name="top_speed_hint">Max speed</string>
    <string name="top_speed_1km_hint">Max speed 1 km</string>
    <string name="top_speed_5km_hint">Max speed 5 km</string>
    <string name="top_speed_10km_hint">Max speed 10 km</string>
    <string name="top_speed_15km_hint">Max speed 15 km</string>
    <string name="top_speed_20km_hint">Max speed 20 km</string>
    <string name="top_speed_30km_hint">Max speed 30 km</string>
    <string name="top_speed_40km_hint">Max speed 40 km</string>
    <string name="top_speed_50km_hint">Max speed 50 km</string>
    <string name="top_speed_75km_hint">Max speed 75 km</string>
    <string name="top_speed_100km_hint">Max speed 100 km</string>
    <string name="top_elevation_hint">Max elevation</string>
    <string name="action_search">Search</string>
    <string name="empty" />
    <string name="km">km</string>
    <string name="value_with_km">%1$s km</string>
    <string name="kmh">km/h</string>
    <string name="value_with_hm">%1$s hm</string>
    <string name="hm">hm</string>
    <string name="value_with_per_cent">%1$s %%</string>
    <string name="per_cent">%</string>
    <string name="value_with_kmh">%1$s km/h</string>
    <string name="value_with_m">%1$s m</string>
    <string name="value_with_h">%1$s h</string>
    <string name="total_height_meters">Height meters</string>
    <string name="total_kilometers">Kilometers</string>
    <string name="total_activities">Total activities</string>
    <string name="total_summits">Total summits</string>
    <string name="achievement">Achievement in selected year</string>
    <string name="sport_type">sport type</string>
    <string name="sport_group">sport group</string>
    <string name="sport_type_image">sport type image</string>
    <string name="delete_icon">delete icon</string>
    <string name="edit_icon">edit icon</string>
    <string name="add_coordinate">add coordinate</string>
    <string name="is_favorite">Mark this entry as favorite summit</string>
    <string name="choose_data_source">Choose data source</string>
    <string name="addGpsTrack">add GPS track</string>
    <string name="add_mountain_pass">add mountain pass</string>
    <string name="select_pass_start_point">Select pass start point</string>
    <string name="select_pass_end_point">Select pass end point</string>
    <string name="no_gps_track_for_pass">No GPS track available. Please add a GPS track first.</string>
    <string name="add_activity">Add Garmin activity</string>
    <string name="sort_entries">Sort entries</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="by_name">name</string>
    <string name="by_date">date</string>
    <string name="by_height_meter">hm</string>
    <string name="by_km">km</string>
    <string name="separator">- </string>
    <string name="filter_by_kilometer">Filter by Kilometer:</string>
    <string name="filterByHm">Filter by height meter</string>
    <string name="filterByTopSpeed">Filter by top speed</string>
    <string name="filterByTopElevation">Filter by top elevation</string>
    <string name="highest_peak">Highest Peak</string>
    <string name="top_speed">Top Speed</string>
    <string name="highest_average_speed">Highest average speed</string>
    <string name="longest_distance">Longest Distance</string>
    <string name="visited_countries">Number of visited Countries</string>
    <string name="total_km_per_road_type">Total km per Road Type</string>
    <string name="total_km_per_surface">Total km per Surface</string>
    <string name="height_meter_done">Most height meter done</string>
    <string name="elevationGain">Height meter</string>
    <string name="height_meter_accumulated">Height meter accumulated</string>
    <string name="power">Power</string>
    <string name="cadence">Cadence</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="resting_heart_rate">Resting Heart Rate</string>
    <string name="min_heart_rate">Minimal Heart Rate</string>
    <string name="max_heart_rate">Maximal Heart Rate</string>
    <string name="by_elevation">height</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all">All</string>
    <string name="with_gpx"> With gpx </string>
    <string name="with_position"> With position </string>
    <string name="until">until</string>
    <string name="from">from</string>
    <string name="highest_hr">Highest average HR</string>
    <string name="highest_grit">Highest grit</string>
    <string name="highest_flow">Highest flow</string>
    <string name="highest_training_load">Highest trainings load</string>
    <string name="open_with">open with</string>
    <string name="average_hr">Average heart rate</string>
    <string name="sensor_data">Sensor Data</string>
    <string name="max_hr">Max heart rate</string>
    <string name="calories">Calories</string>
    <string name="kcal">kcal</string>
    <string name="aerobic_te">Aerobic Training Effect</string>
    <string name="anaerobic_te">Anaerobic Training Effect</string>
    <string name="flow">Flow (keep velocity)</string>
    <string name="grit">Grit (difficulty)</string>
    <string name="trainingLoad">Training load</string>
    <string name="add_image">Add image</string>
    <string name="add_images">Add images</string>
    <string name="error_first_image_must_be_landscape">The first image must be in landscape format</string>
    <string name="with_image">With image</string>
    <string name="set_date">Set date</string>
    <string name="set_activity">Set activity</string>
    <string name="end_of">End of</string>
    <string name="connected_activities">Connected activities</string>
    <string name="deleted_activity">Deleted activity</string>
    <string-array name="date_array">
        <item>Total</item>
        <item>Custom</item>
    </string-array>
    <string name="tab_text_0">Base Data</string>
    <string name="tab_text_1">External Data</string>
    <string name="tab_text_2">Images</string>
    <string name="tab_text_3">Map</string>
    <string name="tab_text_4">Power</string>
    <string name="bar_charts">Bar Charts</string>
    <string name="summit_image">Summit image</string>
    <string name="overview">Overview</string>
    <string name="action_settings">Settings</string>
    <string name="vs">vs</string>
    <string name="map_type">Change map type</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="search">Search</string>
    <string name="my_position">Location</string>
    <string name="participants">Participants</string>
    <string name="garmin_pwd_summary">Enter Garmin password to retrieve gpx from Garmin connect</string>
    <string name="garmin_pwd_title">Enter Garmin password</string>
    <string name="garmin_user_summary">Enter Garmin user name to retrieve gpx from Garmin connect</string>
    <string name="garmin_user_title">Enter Garmin user name</string>
    <string name="max_number_points_title">Maximum number of points on map</string>
    <string name="max_number_points">Enter the maximum number of points which will be shown on a map.</string>
    <string name="minimal_delta_for_elevation_gain_title">Minimal delta for height meters</string>
    <string name="minimal_delta_for_elevation_gain">Enter the minimal delta in meters which is used for calculating the climbed height meters. A difference in height meters below this threshold will be ignored.</string>
    <string name="use_simplified_tracks_title">Use simplified tracks</string>
    <string name="use_simplified_tracks">Use simplified tracks to reduce the loading time of gps tracks.</string>
    <string name="tcx_switch">Turn this option to download tcx instead of gpx files</string>
    <string name="tcx_switch_title">Download tcx instead of gpx</string>
    <string name="current_year_summary">Turn this option to change the default behaviour at startup</string>
    <string name="current_year_title">Show entries of current year</string>
    <string name="annual_target_height_meter_summary">Please provide your annual target for elevation gain</string>
    <string name="annual_target_height_meter_title">Annual target for elevation gain</string>
    <string name="annual_target_kilometer_summary">Please provide your annual target for kilometers covered</string>
    <string name="annual_target_kilometer_title">Annual target for kilometers</string>
    <string name="annual_target_activities_summary">Please provide your annual target for activities</string>
    <string name="annual_target_activities_title">Annual target for activities</string>
    <string name="watt">W</string>
    <string name="bpm">bpm</string>
    <string name="update_new_summits">Update summits from Garmin</string>
    <string name="merge">Merge</string>
    <string name="ignore">Ignore</string>
    <string name="back">Back</string>
    <string name="revert_ignored_summits">Clean ignored summits</string>
    <string name="forecast">Forecast</string>
    <string name="update_3rd_part">Update third party data</string>
    <string name="minutes">minutes</string>
    <string name="sec">sec</string>
    <string name="description">Description</string>
</resources>