<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:title="@string/annual_target_height_meter_title"
        android:key="annual_target"
        android:defaultValue="50000"
        android:inputType="number"
        android:summary="@string/annual_target_height_meter_summary"/>
    <EditTextPreference
        android:title="@string/annual_target_kilometer_title"
        android:key="annual_target_km"
        android:defaultValue="1200"
        android:inputType="number"
        android:summary="@string/annual_target_kilometer_summary"/>
    <EditTextPreference
        android:title="@string/annual_target_activities_title"
        android:key="annual_target_activities"
        android:defaultValue="52"
        android:inputType="number"
        android:summary="@string/annual_target_activities_summary"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="current_year_switch"
        android:summary="@string/current_year_summary"
        android:title="@string/current_year_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="download_tcx"
        android:summary="@string/tcx_switch"
        android:title="@string/tcx_switch_title" />
    <EditTextPreference
        android:key="garmin_username"
        android:title="@string/garmin_user_title"
        android:summary="@string/garmin_user_summary"
        android:inputType="text" />
    <de.drtobiasprinz.summitbook.ui.utils.PasswordPreference
        android:key="garmin_password"
        android:title="@string/garmin_pwd_title"
        android:summary="@string/garmin_pwd_summary"
        android:inputType="textPassword" />
    <de.drtobiasprinz.summitbook.ui.utils.DatePreference
        android:title="Start date for syncing Garmin Activities"
        android:key="garmin_start_date"
        android:defaultValue="2020-01-01"/>
    <EditTextPreference
        android:title="@string/minimal_delta_for_elevation_gain_title"
        android:key="min_delta_height_meters"
        android:defaultValue="5"
        android:inputType="number"
        android:summary="@string/minimal_delta_for_elevation_gain"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="use_simplified_tracks"
        android:title="@string/use_simplified_tracks_title"
        android:summary="@string/use_simplified_tracks"/>
    <EditTextPreference
        android:title="@string/max_number_points_title"
        android:key="max_number_points"
        android:defaultValue="10000"
        android:inputType="number"
        android:summary="@string/max_number_points"/>
    <SeekBarPreference
        app:defaultValue="0"
        app:showSeekBarValue="true"
        app:key="indoor_height_meter_per_cent"
        app:title="Indoor height meter inclusion %"/>
</PreferenceScreen>