<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/action_search"
        app:iconTint="@color/white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionSort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:orderInCategory="1"
        app:iconTint="@color/white"
        android:title="@string/sort_entries"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_baseline_sync_24"
        android:orderInCategory="1"
        android:title="@string/update_3rd_part"
        app:showAsAction="ifRoom" />
</menu>