<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:gravity="center" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>


        <EditText
            android:id="@+id/bookmark_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_landscape_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/summit_name_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Spinner
            android:id="@+id/activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/height_meter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_trending_up_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/height_meter_hint"
            android:importantForAutofill="no"
            android:inputType="number" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/kilometers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icons8_map_pinpoint_20"
                android:drawablePadding="10dp"
                android:hint="@string/kilometers_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/km" />
        </RelativeLayout>

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/comment_hint"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="3"
            android:minLines="3"
            android:scrollbars="vertical" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_bookmark_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@id/add_bookmark_cancel"
                android:backgroundTint="@color/green_500"
                android:text="@string/saveButtonText" />

            <Button
                android:id="@+id/add_bookmark_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/red_500"
                android:text="@string/cancelButtonText" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>