<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    card_view:cardBackgroundColor="@color/color_white"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="2dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/minutes"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="2dp"
            android:text="@string/minutes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/velocity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="2dp"
            android:text="@string/kmh"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toEndOf="@+id/minutes"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bpm"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="2dp"
            android:text="@string/bpm"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toEndOf="@+id/velocity"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/watt"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="2dp"
            android:text="@string/watt"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toEndOf="@+id/bpm"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/entryEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@color/color_white"
            android:contentDescription="@string/edit_icon"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:src="@drawable/baseline_mode_edit_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/entryDelete"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/entryDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@color/color_white"
            android:contentDescription="@string/delete_icon"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:src="@drawable/baseline_delete_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
